<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/relative_layout"
    tools:context=".QuizActivity">


    <LinearLayout
        android:id="@+id/headerView"
        style="@style/linear_layout_header">

        <TextView
            android:id="@+id/textView"
            style="@style/text"
            android:text="@string/player" />

        <TextView
            android:id="@+id/playerName"
            style="@style/name_text" />


    </LinearLayout>


    <ScrollView
        android:id="@+id/scrollableContent"
        style="@style/scroll_view">


        <LinearLayout style="@style/quiz_linear_layout">

            <View style="@style/horizontal_line" />


            <LinearLayout style="@style/question_linear_layout">


                <TextView
                    style="@style/progress_numbers"
                    android:layout_gravity="end"
                    android:text="@string/number1" />

                <TextView
                    style="@style/question_text"
                    android:text="@string/question1" />

                <ImageView
                    android:id="@+id/bg_map"
                    style="@style/image"
                    android:src="@drawable/bg_map"
                    tools:ignore="contentDescription" />

                <RadioGroup style="@style/radio_group">

                    <RadioButton
                        android:id="@+id/a11"
                        style="@style/radio_button"
                        android:text="@string/answer11" />

                    <RadioButton
                        android:id="@+id/a12"
                        style="@style/radio_button"
                        android:text="@string/answer12" />

                    <RadioButton
                        android:id="@+id/a13"
                        style="@style/radio_button"
                        android:text="@string/answer13" />

                </RadioGroup>

                <View style="@style/horizontal_line" />
            </LinearLayout>

            <View style="@style/horizontal_line" />

            <LinearLayout style="@style/question_linear_layout">

                <TextView
                    style="@style/progress_numbers"
                    android:layout_gravity="end"
                    android:text="@string/number2" />

                <TextView
                    style="@style/question_text"
                    android:text="@string/question2" />

                <ImageView
                    android:id="@+id/eu_map"
                    style="@style/image"
                    android:src="@drawable/eu_map"
                    tools:ignore="contentDescription" />

                <RadioGroup style="@style/radio_group">

                    <RadioButton
                        android:id="@+id/a21"
                        style="@style/radio_button"
                        android:text="@string/answer21" />

                    <RadioButton
                        android:id="@+id/a22"
                        style="@style/radio_button"
                        android:text="@string/answer22" />

                    <RadioButton
                        android:id="@+id/a23"
                        style="@style/radio_button"
                        android:text="@string/answer23" />

                </RadioGroup>


                <View style="@style/horizontal_line" />

            </LinearLayout>

            <View style="@style/horizontal_line" />

            <LinearLayout style="@style/question_linear_layout">

                <TextView
                    style="@style/progress_numbers"
                    android:layout_gravity="end"
                    android:text="@string/number3" />

                <TextView
                    style="@style/question_text"
                    android:text="@string/question3" />

                <ImageView
                    android:id="@+id/electrum"
                    style="@style/image"
                    android:src="@drawable/electrum"
                    tools:ignore="contentDescription" />

                <RadioGroup style="@style/radio_group">

                    <RadioButton
                        android:id="@+id/a31"
                        style="@style/radio_button"
                        android:text="@string/answer31" />

                    <RadioButton
                        android:id="@+id/a32"
                        style="@style/radio_button"
                        android:text="@string/answer32" />

                    <RadioButton
                        android:id="@+id/a33"
                        style="@style/radio_button"
                        android:text="@string/answer33" />

                </RadioGroup>


                <View style="@style/horizontal_line" />

            </LinearLayout>

            <View style="@style/horizontal_line" />

            <LinearLayout style="@style/question_linear_layout">

                <TextView
                    style="@style/progress_numbers"
                    android:layout_gravity="end"
                    android:text="@string/number4" />

                <TextView
                    style="@style/question_text"
                    android:text="@string/question4" />

                <ImageView
                    android:id="@+id/gold_ring"
                    style="@style/image"
                    android:src="@drawable/gold_ring"
                    tools:ignore="contentDescription" />

                <CheckBox
                    android:id="@+id/a41"
                    style="@style/checkbox"
                    android:text="@string/answer41" />

                <CheckBox
                    android:id="@+id/a42"
                    style="@style/checkbox"
                    android:text="@string/answer42" />

                <CheckBox
                    android:id="@+id/a43"
                    style="@style/checkbox"
                    android:text="@string/answer43" />

                <CheckBox
                    android:id="@+id/a44"
                    style="@style/checkbox"
                    android:text="@string/answer44" />


                <View style="@style/horizontal_line" />

            </LinearLayout>


            <View style="@style/horizontal_line" />

            <LinearLayout style="@style/question_linear_layout">

                <TextView
                    style="@style/progress_numbers"
                    android:layout_gravity="end"
                    android:text="@string/number5" />

                <TextView
                    style="@style/question_text"
                    android:text="@string/question5" />

                <ImageView
                    android:id="@+id/California"
                    style="@style/image"
                    android:src="@drawable/seal_california"
                    tools:ignore="contentDescription" />

                <RadioGroup style="@style/radio_group">

                    <RadioButton
                        android:id="@+id/a51"
                        style="@style/radio_button"
                        android:text="@string/answer51" />

                    <RadioButton
                        android:id="@+id/a52"
                        style="@style/radio_button"
                        android:text="@string/answer52" />


                </RadioGroup>


                <View style="@style/horizontal_line" />

            </LinearLayout>


            <View style="@style/horizontal_line" />

            <LinearLayout style="@style/question_linear_layout">

                <TextView
                    style="@style/progress_numbers"
                    android:layout_gravity="end"
                    android:text="@string/number6" />

                <TextView
                    style="@style/question_text"
                    android:text="@string/question6" />

                <ImageView
                    android:id="@+id/gold_kiulcheta"
                    style="@style/image"
                    android:src="@drawable/gold_kiulcheta"
                    tools:ignore="contentDescription" />

                <EditText
                    android:id="@+id/carat"
                    style="@style/edit_text_questions" />


                <View style="@style/horizontal_line" />

            </LinearLayout>

            <View style="@style/horizontal_line" />

            <LinearLayout style="@style/question_linear_layout">

                <TextView
                    style="@style/progress_numbers"
                    android:layout_gravity="end"
                    android:text="@string/number7" />

                <TextView
                    style="@style/question_text"
                    android:text="@string/question7" />

                <ImageView
                    android:id="@+id/gold_nugget"
                    style="@style/image"
                    android:src="@drawable/gold_nugget"
                    tools:ignore="contentDescription" />

                <RadioGroup style="@style/radio_group">

                    <RadioButton
                        android:id="@+id/a71"
                        style="@style/radio_button"
                        android:text="@string/answer71" />

                    <RadioButton
                        android:id="@+id/a72"
                        style="@style/radio_button"
                        android:text="@string/answer72" />

                    <RadioButton
                        android:id="@+id/a73"
                        style="@style/radio_button"
                        android:text="@string/answer73" />

                </RadioGroup>

                <View style="@style/horizontal_line" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


    <LinearLayout
        android:id="@+id/footerView"
        style="@style/linear_layout_footer">


        <Button
            android:id="@+id/button_check"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="checkAnswers"
            android:text="@string/button_check" />

        <Button
            android:id="@+id/button_results"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:enabled="false"
            android:onClick="showResults"
            android:text="@string/button_results" />


    </LinearLayout>


</RelativeLayout>